test/ui/test/packages/unsupported-dependency-providers/package.recnot

name: future,
version: "99.99.999",

components: {
    future: {
        type: library,
        path: "library.lushui",

        dependencies: {
            thing0: { provider: "git" },
            thing1: { provider: registry },
        },
    },
},
